--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ Le[[:space:]]jeu/TU-NNEL/Assets/Meshes/* filter=lfs diff=lfs merge=lfs -text
 Le[[:space:]]jeu/TU-NNEL/Library/ArtifactDB filter=lfs diff=lfs merge=lfs -text
 Le[[:space:]]jeu/TU-NNEL/Library/Artifacts/df/df16d45abac5d887c92f410fbd9d33f2 filter=lfs diff=lfs merge=lfs -text
 Le[[:space:]]jeu/TU-NNEL/Library/Artifacts/**/* filter=lfs diff=lfs merge=lfs -text
+*.blend filter=lfs diff=lfs merge=lfs -text
